footer, search, new filter svg, fixed seeing words above letters on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -50,13 +50,21 @@ body {
 	max-width: 1500px;
 	margin: 0 auto;
 	min-height: 400px;
-  margin-bottom: 100px;
+  // margin-bottom: 100px;
   clear: both;
+	-webkit-transition: ease all 0.3s;
+	-moz-transition: ease all 0.3s;
+	-o-transition: ease all 0.3s;
+	transition: ease all 0.3s;
 }
 
 body.modal-open {
 	position: fixed;
 	overflow: hidden;
+	-webkit-transition: ease all 0.3s;
+	-moz-transition: ease all 0.3s;
+	-o-transition: ease all 0.3s;
+	transition: ease all 0.3s;
 
 	:not(.modal) {
 		pointer-events: none;
@@ -106,14 +114,6 @@ p, li {
 
 p, sup {
 	max-width: 32em;
-}
-
-.ba {
-	border: 1px solid black;
-}
-
-.by {
-	border: 1px solid gold;
 }
 
 .container {
